# DocuBOT

./: README.md  readme.md
docubot/: pyproject.toml  repo_contents.txt  report.md
docubot/db/: chroma.sqlite3
docubot/src/: test.py
docubot/src/db/: chroma.sqlite3
docubot/src/docubot/: crew.py  main.py
docubot/src/docubot/config/: agents.yaml  tasks.yaml
