[tool.poetry]
name = "docubot"
version = "0.1.0"
description = "DocuBot using crewAI"
authors = ["Dheeraj Unni <dheerajnunni@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }

[tool.poetry.scripts]
docubot = "docubot.main:run"
train = "docubot.main:train"
replay = "docubot.main:replay"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
